@@ -52,15 +52,21 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.time.ZoneId;
+import java.time.temporal.ChronoField;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.lang3.StringUtils;
 import org.dspace.app.rest.matcher.UsageReportMatcher;
 import org.dspace.app.rest.model.UsageReportPointCategoryRest;
 import org.dspace.app.rest.model.UsageReportPointCityRest;
@@ -85,12 +91,14 @@ import org.dspace.builder.SiteBuilder;
 import org.dspace.content.Bitstream;
 import org.dspace.content.Collection;
 import org.dspace.content.Community;
+import org.dspace.content.DSpaceObject;
 import org.dspace.content.Item;
 import org.dspace.content.Site;
 import org.dspace.core.Constants;
 import org.dspace.eperson.EPerson;
 import org.dspace.services.ConfigurationService;
 import org.dspace.statistics.factory.StatisticsServiceFactory;
+import org.dspace.util.MultiFormatDateParser;
 import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.BeforeClass;
@@ -175,11 +183,13 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         //first publication for person item
         publicationVisited1 = ItemBuilder.createItem(context, collectionVisited)
                                          .withEntityType("Publication")
+                                         .withTitle("publicationVisited1")
                                          .withAuthor(person.getName(), person.getID().toString())
                                          .build();
         //second publication for person item
         publicationVisited2 = ItemBuilder.createItem(context, collectionVisited)
                                          .withEntityType("Publication")
+                                         .withTitle("publicationVisited2")
                                          .withAuthor(person.getName(), person.getID().toString())
                                          .build();
         //bitstream for first publication of person
@@ -362,42 +372,40 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("community");
-        expectedPoint.setId(communityVisited.getID().toString());
-
         // And request that community's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(communityVisited, 1)
+                           )
+                       )
+                   )));
     }
 
     @Test
     public void totalVisitsReport_Community_NotVisited() throws Exception {
         // ** WHEN **
         // Community is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("community");
-        expectedPoint.setId(communityNotVisited.getID().toString());
-
         // And request that community's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + communityNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           communityNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(communityNotVisited, 0)
+                           )
+                       )
+                   )));
     }
 
     @Test
@@ -420,42 +428,40 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 2);
-        expectedPoint.setType("collection");
-        expectedPoint.setId(collectionVisited.getID().toString());
-
         // And request that collection's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           collectionVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(collectionVisited, 2)
+                           )
+                       )
+                   )));
     }
 
     @Test
     public void totalVisitsReport_Collection_NotVisited() throws Exception {
         // ** WHEN **
         // Collection is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("collection");
-        expectedPoint.setId(collectionNotVisited.getID().toString());
-
         // And request that collection's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(collectionNotVisited, 0)
+                           )
+                       )
+                   )));
     }
 
     @Test
@@ -473,42 +479,42 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("item");
-        expectedPoint.setId(itemVisited.getID().toString());
-
         // And request that collection's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(itemVisited, 1)
+                           )
+                       )
+                   )));
     }
 
     @Test
     public void totalVisitsReport_Item_NotVisited() throws Exception {
         // ** WHEN **
         //Item is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("item");
-        expectedPoint.setId(itemNotVisitedWithBitstreams.getID().toString());
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(itemNotVisitedWithBitstreams, 0)
+        );
 
         // And request that item's TotalVisits stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
-                   .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                             .andExpect(jsonPath("$", Matchers.is(
+                                 UsageReportMatcher.matchUsageReport(
+                                     itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                                     TOTAL_VISITS_REPORT_ID,
+                                     expectedPoints
+                                 )
+                             )));
 
         // only admin access visits report
         getClient(loggedInToken).perform(
@@ -526,19 +532,25 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 get("/api/statistics/usagereports/"
                         + itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                                TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
-           getClient().perform(
+       getClient().perform(
                 get("/api/statistics/usagereports/"
                         + itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                                TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
@@ -556,10 +568,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("bitstream");
-        expectedPoint.setId(bitstreamVisited.getID().toString());
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(bitstreamVisited, 1)
+        );
 
         // And request that bitstream's TotalVisits stat report
         getClient(adminToken).perform(
@@ -567,10 +578,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin access visits report
         getClient(loggedInToken).perform(
@@ -587,28 +600,34 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
         getClient().perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
     public void totalVisitsReport_Bitstream_NotVisited() throws Exception {
         // ** WHEN **
         // Bitstream is never visited
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 0);
-        expectedPoint.setType("bitstream");
-        expectedPoint.setId(bitstreamNotVisited.getID().toString());
+
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(bitstreamNotVisited, 0)
+        );
 
         String authToken = getAuthToken(admin.getEmail(), password);
         // And request that bitstream's TotalVisits stat report
@@ -617,10 +636,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                               TOTAL_VISITS_REPORT_ID, Arrays.asList(expectedPoint))))
-                             );
+                       UsageReportMatcher.matchUsageReport(
+                           bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                           TOTAL_VISITS_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         String tokenEPerson = getAuthToken(eperson.getEmail(), password);
         getClient(tokenEPerson).perform(
@@ -637,18 +658,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(tokenEPerson).perform(
                 get("/api/statistics/usagereports/" + bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
       getClient().perform(
                 get("/api/statistics/usagereports/" + bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                        TOTAL_VISITS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
@@ -666,7 +693,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        List<UsageReportPointRest> expectedPoints = this.getListOfVisitsPerMonthsPoints(1);
+        List<UsageReportPointRest> expectedPoints = getLastMonthVisitPoints(1);
 
         // And request that item's TotalVisitsPerMonth stat report
         getClient(adminToken).perform(
@@ -674,9 +701,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                               TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access
         getClient(loggedInToken).perform(
@@ -693,26 +723,30 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        expectedPoints
+                        )
+                )));
 
        getClient().perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
     public void totalVisitsPerMonthReport_Item_NotVisited() throws Exception {
         // ** WHEN **
         // Item is not visited
-        List<UsageReportPointRest> expectedPoints = this.getListOfVisitsPerMonthsPoints(0);
-
         // And request that item's TotalVisitsPerMonth stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + itemNotVisitedWithBitstreams.getID() + "_" +
@@ -720,10 +754,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(
+                       UsageReportMatcher.matchUsageReport(
                                itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                               TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                               TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                               getLastMonthVisitPoints(0)
+                       )
+                   )));
     }
 
     @Test
@@ -746,18 +782,18 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        List<UsageReportPointRest> expectedPoints = this.getListOfVisitsPerMonthsPoints(2);
-
         // And request that collection's TotalVisitsPerMonth stat report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(
-                               collectionVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                               TOTAL_VISITS_PER_MONTH_REPORT_ID, expectedPoints))));
+                       UsageReportMatcher.matchUsageReport(
+                           collectionVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                           getLastMonthVisitPoints(2)
+                       )
+                   )));
     }
 
     @Test
@@ -775,10 +811,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPoint = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setType("bitstream");
-        expectedPoint.setId(bitstreamVisited.getID().toString());
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedDsoViews(bitstreamVisited, 1)
+        );
 
         // And request that bitstreams's TotalDownloads stat report
         getClient(adminToken).perform(
@@ -786,9 +821,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                               TOTAL_DOWNLOADS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                           TOTAL_DOWNLOADS_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access to downloads report
         getClient(loggedInToken).perform(
@@ -805,18 +843,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID, TOTAL_DOWNLOADS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                        TOTAL_DOWNLOADS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
         getClient().perform(
                 get("/api/statistics/usagereports/" + bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID, TOTAL_DOWNLOADS_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                        TOTAL_DOWNLOADS_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     @Test
@@ -847,9 +891,14 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                               TOTAL_DOWNLOADS_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                           TOTAL_DOWNLOADS_REPORT_ID,
+                           List.of(
+                               getExpectedDsoViews(bitstreamVisited, 1)
+                           )
+                       )
+                   )));
     }
 
     @Test
@@ -863,9 +912,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                               TOTAL_DOWNLOADS_REPORT_ID, new ArrayList<>()))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemNotVisitedWithBitstreams.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                           TOTAL_DOWNLOADS_REPORT_ID,
+                           List.of()
+                       )
+                   )));
     }
 
     @Test
@@ -893,9 +945,10 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointCountryRest expectedPoint = new UsageReportPointCountryRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setIdAndLabel(Locale.US.getCountry(), Locale.US.getDisplayCountry(context.getCurrentLocale()));
+        List<UsageReportPointRest> expectedPoints = List.of(
+                getExpectedCountryViews(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()),
+                1));
 
         // And request that collection's TopCountries report
         getClient(adminToken).perform(
@@ -903,9 +956,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                               TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                           TOP_COUNTRIES_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access to countries report
         getClient(loggedInToken).perform(
@@ -922,18 +978,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID, TOP_COUNTRIES_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                        TOP_COUNTRIES_REPORT_ID,
+                        expectedPoints
+                        )
+                )));
 
       getClient().perform(
                 get("/api/statistics/usagereports/" + collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(UsageReportMatcher.matchUsageReport(
-                                collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID, TOP_COUNTRIES_REPORT_ID,
-                                Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        collectionVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                        TOP_COUNTRIES_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     /**
@@ -969,9 +1031,14 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                               TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                           TOP_COUNTRIES_REPORT_ID,
+                           List.of(
+                               getExpectedCountryViews("US", "United States", 2)
+                           )
+                       )
+                   )));
     }
 
     /**
@@ -987,9 +1054,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemNotVisitedWithBitstreams.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                               TOP_COUNTRIES_REPORT_ID, new ArrayList<>()))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemNotVisitedWithBitstreams.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                           TOP_COUNTRIES_REPORT_ID,
+                           List.of()
+                       )
+                   )));
     }
 
     /**
@@ -1010,9 +1080,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointCityRest expectedPoint = new UsageReportPointCityRest();
-        expectedPoint.addValue("views", 1);
-        expectedPoint.setId("New York");
+        List<UsageReportPointRest> expectedPoints = List.of(
+            getExpectedCityViews("New York", 1)
+        );
 
         // And request that item's TopCities report
         getClient(adminToken).perform(
@@ -1020,9 +1090,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                               TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                           TOP_CITIES_REPORT_ID,
+                           expectedPoints
+                       )
+                   )));
 
         // only admin has access to cities report
         getClient(loggedInToken).perform(
@@ -1039,18 +1112,24 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         getClient(loggedInToken).perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(
-                                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                                        TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                        TOP_CITIES_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
 
         getClient().perform(
                 get("/api/statistics/usagereports/" + itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$",
-                        Matchers.is(
-                                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                                        TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                .andExpect(jsonPath("$", Matchers.is(
+                    UsageReportMatcher.matchUsageReport(
+                        itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                        TOP_CITIES_REPORT_ID,
+                        expectedPoints
+                    )
+                )));
     }
 
     /**
@@ -1081,19 +1160,20 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointCityRest expectedPoint = new UsageReportPointCityRest();
-        expectedPoint.addValue("views", 3);
-        expectedPoint.setId("New York");
-
         // And request that community's TopCities report
         getClient(adminToken).perform(
             get("/api/statistics/usagereports/" + communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID))
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                               TOP_CITIES_REPORT_ID, Arrays.asList(expectedPoint)))));
+                       UsageReportMatcher.matchUsageReport(
+                           communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                           TOP_CITIES_REPORT_ID,
+                           List.of(
+                               getExpectedCityViews("New York", 3)
+                           )
+                       )
+                   )));
     }
 
     /**
@@ -1109,9 +1189,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                    // ** THEN **
                    .andExpect(status().isOk())
                    .andExpect(jsonPath("$", Matchers.is(
-                       UsageReportMatcher
-                           .matchUsageReport(collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                               TOP_CITIES_REPORT_ID, new ArrayList<>()))));
+                       UsageReportMatcher.matchUsageReport(
+                           collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                           TOP_CITIES_REPORT_ID,
+                           List.of()
+                       )
+                   )));
     }
 
     @Test
@@ -1274,21 +1357,25 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest expectedPoint1 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint1.addValue("views", 1);
         expectedPoint1.setType("item");
+        expectedPoint1.setLabel("My item");
         expectedPoint1.setId(item.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint2 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint2.addValue("views", 2);
         expectedPoint2.setType("item");
+        expectedPoint2.setLabel("My item 2");
         expectedPoint2.setId(item2.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint3 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint3.addValue("views", 1);
         expectedPoint3.setType("item");
+        expectedPoint3.setLabel("My item 3");
         expectedPoint3.setId(item3.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint4 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint4.addValue("views", 1);
         expectedPoint4.setType("item");
+        expectedPoint4.setLabel("My item 4");
         expectedPoint4.setId(item4.getID().toString());
 
         List<UsageReportPointRest> points = List.of(expectedPoint1, expectedPoint2, expectedPoint3, expectedPoint4);
@@ -1343,7 +1430,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 matchUsageReport(site.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOP_ITEMS_REPORT_ID, points),
                 matchUsageReport(site.getID() + "_" + TOP_CITIES_REPORT_ID, TOP_CITIES_REPORT_ID, List.of(pointCity)),
                 matchUsageReport(site.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    TOTAL_VISITS_PER_MONTH_REPORT_ID, getListOfVisitsPerMonthsPoints(5, 12)),
+                    TOTAL_VISITS_PER_MONTH_REPORT_ID, getLastMonthVisitPoints(5)),
                 matchUsageReport(site.getID() + "_" + TOP_CONTINENTS_REPORT_ID, TOP_CONTINENTS_REPORT_ID,
                     List.of(pointContinent)),
                 matchUsageReport(site.getID() + "_" + TOP_CATEGORIES_REPORT_ID, TOP_CATEGORIES_REPORT_ID, categories),
@@ -1404,16 +1491,19 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest expectedPoint1 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint1.addValue("views", 3);
         expectedPoint1.setType("item");
+        expectedPoint1.setLabel("Item 1");
         expectedPoint1.setId(item1.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint2 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint2.addValue("views", 3);
         expectedPoint2.setType("item");
+        expectedPoint2.setLabel("Item 2");
         expectedPoint2.setId(item2.getID().toString());
 
         UsageReportPointDsoTotalVisitsRest expectedPoint3 = new UsageReportPointDsoTotalVisitsRest();
         expectedPoint3.addValue("views", 2);
         expectedPoint3.setType("item");
+        expectedPoint3.setLabel("Item 3");
         expectedPoint3.setId(item3.getID().toString());
 
         List<UsageReportPointRest> points = List.of(expectedPoint1, expectedPoint2, expectedPoint3);
@@ -1441,7 +1531,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 matchUsageReport(site.getID() + "_" + TOP_DOWNLOAD_CITIES_REPORT_ID,
                     TOP_CITIES_REPORT_ID, List.of(pointCity)),
                 matchUsageReport(site.getID() + "_" + TOTAL_DOWNLOAD_PER_MONTH_REPORT_ID,
-                    TOTAL_VISITS_PER_MONTH_REPORT_ID, getListOfVisitsPerMonthsPoints(8, 12)),
+                    TOTAL_VISITS_PER_MONTH_REPORT_ID, getLastMonthVisitPoints(8)),
                 matchUsageReport(site.getID() + "_" + TOP_DOWNLOAD_CONTINENTS_REPORT_ID,
                     TOP_CONTINENTS_REPORT_ID, List.of(pointContinent)),
                 matchUsageReport(site.getID() + "_" + TOP_DOWNLOAD_COUNTRIES_REPORT_ID,
@@ -1491,48 +1581,70 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(communityVisited, 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry))
-                                                                                       )));
+                    getLastMonthVisitPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    communityVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                )
+            )));
     }
 
     @Test
     public void usageReportsSearch_Collection_NotVisited() throws Exception {
         // ** WHEN **
         // Collection is not visited
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisits.addValue("views", 0);
-        expectedPointTotalVisits.setType("collection");
-        expectedPointTotalVisits.setId(collectionNotVisited.getID().toString());
         // And request the collection's usage reports
         getClient(adminToken)
-                .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
-                        "/collections/" + collectionNotVisited.getID()))
-                // ** THEN **
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
-                .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                        UsageReportMatcher
-                                .matchUsageReport(collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
-                                        TOTAL_VISITS_REPORT_ID,
-                                        Arrays.asList(expectedPointTotalVisits)),
-                        UsageReportMatcher
-                                .matchUsageReport(collectionNotVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                        TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                        this.getListOfVisitsPerMonthsPoints(0)),
-                        UsageReportMatcher.matchUsageReport(collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                                TOP_CITIES_REPORT_ID, new ArrayList<>()),
-                        UsageReportMatcher.matchUsageReport(collectionNotVisited.getID() + "_" +
-                                                                TOP_COUNTRIES_REPORT_ID,
-                                TOP_COUNTRIES_REPORT_ID, new ArrayList<>()))));
+            .perform(get("/api/statistics/usagereports/search/object?uri=http://localhost:8080/server/api/core" +
+                         "/collections/" + collectionNotVisited.getID()))
+            // ** THEN **
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
+            .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(collectionNotVisited, 0)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                    TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                    getLastMonthVisitPoints(0)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of()
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    collectionNotVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of()
+                )
+            )));
     }
 
     @Test
@@ -1584,18 +1696,38 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(itemVisited, 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                    TOTAL_DOWNLOADS_REPORT_ID, new ArrayList<>()))));
+                    getLastMonthVisitPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                    TOTAL_DOWNLOADS_REPORT_ID,
+                    List.of()
+                )
+            )));
     }
 
     @Test
@@ -1699,18 +1831,41 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(itemVisited, 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry)),
-                UsageReportMatcher.matchUsageReport(itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                    TOTAL_DOWNLOADS_REPORT_ID, totalDownloadsPoints))));
+                    getLastMonthVisitPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    itemVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                    TOTAL_DOWNLOADS_REPORT_ID,
+                    List.of(
+                        getExpectedDsoViews(bitstream1, 1),
+                        getExpectedDsoViews(bitstream2, 2)
+                    )
+                )
+            )));
     }
 
     @Test
@@ -1728,20 +1883,9 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .contentType(contentType))
                 .andExpect(status().isCreated());
 
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisits.addValue("views", 1);
-        expectedPointTotalVisits.setType("bitstream");
-        expectedPointTotalVisits.setLabel("BitstreamVisitedName");
-        expectedPointTotalVisits.setId(bitstreamVisited.getID().toString());
-
-        UsageReportPointCityRest expectedPointCity = new UsageReportPointCityRest();
-        expectedPointCity.addValue("views", 1);
-        expectedPointCity.setId("New York");
-
-        UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
-        expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
-                Locale.US.getDisplayCountry(context.getCurrentLocale()));
+        List<UsageReportPointRest> expectedTotalVisits = List.of(
+            getExpectedDsoViews(bitstreamVisited, 1)
+        );
 
         // And request the community usage reports
         getClient(adminToken)
@@ -1751,42 +1895,36 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
             .andExpect(status().isOk())
             .andExpect(jsonPath("$._embedded.usagereports", not(empty())))
             .andExpect(jsonPath("$._embedded.usagereports", Matchers.containsInAnyOrder(
-                UsageReportMatcher
-                    .matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOTAL_VISITS_REPORT_ID,
-                        Arrays.asList(expectedPointTotalVisits)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOTAL_VISITS_REPORT_ID,
+                    TOTAL_VISITS_REPORT_ID,
+                    expectedTotalVisits
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                    this.getListOfVisitsPerMonthsPoints(1)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
-                    TOP_CITIES_REPORT_ID, Arrays.asList(expectedPointCity)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
-                    TOP_COUNTRIES_REPORT_ID, Arrays.asList(expectedPointCountry)),
-                UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
-                    TOTAL_DOWNLOADS_REPORT_ID, Arrays.asList(expectedPointTotalVisits)))));
-    }
-
-    // Create expected points from -6 months to now, with given number of views in current month
-    private List<UsageReportPointRest> getListOfVisitsPerMonthsPoints(int viewsLastMonth) {
-        return getListOfVisitsPerMonthsPoints(viewsLastMonth, 6);
-    }
-
-    private List<UsageReportPointRest> getListOfVisitsPerMonthsPoints(int viewsLastMonth, int nrOfMonthsBack) {
-        List<UsageReportPointRest> expectedPoints = new ArrayList<>();
-        Calendar cal = Calendar.getInstance(context.getCurrentLocale());
-        for (int i = 0; i <= nrOfMonthsBack; i++) {
-            UsageReportPointDateRest expectedPoint = new UsageReportPointDateRest();
-            if (i > 0) {
-                expectedPoint.addValue("views", 0);
-            } else {
-                expectedPoint.addValue("views", viewsLastMonth);
-            }
-            String month = cal.getDisplayName(Calendar.MONTH, Calendar.LONG, context.getCurrentLocale());
-            expectedPoint.setId(month + " " + cal.get(Calendar.YEAR));
-
-            expectedPoints.add(expectedPoint);
-            cal.add(Calendar.MONTH, -1);
-        }
-        return expectedPoints;
+                    getLastMonthVisitPoints(1)
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOP_CITIES_REPORT_ID,
+                    TOP_CITIES_REPORT_ID,
+                    List.of(
+                        getExpectedCityViews("New York", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOP_COUNTRIES_REPORT_ID,
+                    TOP_COUNTRIES_REPORT_ID,
+                    List.of(
+                        getExpectedCountryViews("US", "United States", 1)
+                    )
+                ),
+                UsageReportMatcher.matchUsageReport(
+                    bitstreamVisited.getID() + "_" + TOTAL_DOWNLOADS_REPORT_ID,
+                    TOTAL_DOWNLOADS_REPORT_ID,
+                    expectedTotalVisits
+                )
+            )));
     }
 
     // This test search for statistics before the moment in which item is visited
@@ -1840,6 +1978,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         List<UsageReportPointRest> categories = List.of(articleCategory, thesisCategory, otherCategory, bookCategory,
             bookChapterCategory, datasetCategory);
 
+        UsageReportPointRest pointPerMonth = new UsageReportPointDateRest();
+        pointPerMonth.setId("June 2019");
+        pointPerMonth.addValue("views", 0);
+
+        List<UsageReportPointRest> pointsPerMonth = List.of(pointPerMonth);
+
         // And request the sites global usage report (show top most popular items) for a specific date range
         // we expect no points becase we are searching in a moment before the view of item happened
         getClient(adminToken)
@@ -1852,7 +1996,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                     matchUsageReport(site.getID() + "_" + TOTAL_VISITS_REPORT_ID, TOP_ITEMS_REPORT_ID, points),
                     matchUsageReport(site.getID() + "_" + TOP_CITIES_REPORT_ID, TOP_CITIES_REPORT_ID, List.of()),
                     matchUsageReport(site.getID() + "_" + TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                        TOTAL_VISITS_PER_MONTH_REPORT_ID, getListOfVisitsPerMonthsPoints(0, 12)),
+                        TOTAL_VISITS_PER_MONTH_REPORT_ID, pointsPerMonth),
                     matchUsageReport(site.getID() + "_" + TOP_CONTINENTS_REPORT_ID,
                         TOP_CONTINENTS_REPORT_ID,List.of()),
                     matchUsageReport(site.getID() + "_" + TOP_CATEGORIES_REPORT_ID,
@@ -1876,20 +2020,14 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                 .content(mapper.writeValueAsBytes(viewEventRest))
                 .contentType(contentType))
                 .andExpect(status().isCreated());
+        getExpectedDsoViews(communityVisited, 1);
+        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = getExpectedDsoViews(communityVisited, 1);
 
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisits = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisits.addValue("views", 1);
-        expectedPointTotalVisits.setType("community");
-        expectedPointTotalVisits.setId(communityVisited.getID().toString());
+        UsageReportPointCityRest expectedPointCity = getExpectedCityViews("New York", 1);
 
-        UsageReportPointCityRest expectedPointCity = new UsageReportPointCityRest();
-        expectedPointCity.addValue("views", 1);
-        expectedPointCity.setId("New York");
+        UsageReportPointCountryRest expectedPointCountry = getExpectedCountryViews(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()), 1);
 
-        UsageReportPointCountryRest expectedPointCountry = new UsageReportPointCountryRest();
-        expectedPointCountry.addValue("views", 1);
-        expectedPointCountry.setIdAndLabel(Locale.US.getCountry(),
-                Locale.US.getDisplayCountry(context.getCurrentLocale()));
         //add one day to the moment when we visit the community
         DateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
         Calendar cal = Calendar.getInstance();
@@ -1910,7 +2048,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                         UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" +
                                                                 TOTAL_VISITS_PER_MONTH_REPORT_ID,
                                                             TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                                            this.getListOfVisitsPerMonthsPoints(1)),
+                                                            getListOfVisitsPerMonthsPoints(1, "2019-06-01")),
                         UsageReportMatcher.matchUsageReport(communityVisited.getID() + "_" +
                                                                 TOP_CITIES_REPORT_ID, TOP_CITIES_REPORT_ID,
                                                             Arrays.asList(expectedPointCity)),
@@ -1976,7 +2114,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                         UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" +
                                                                 TOTAL_VISITS_PER_MONTH_REPORT_ID,
                                                             TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                                            this.getListOfVisitsPerMonthsPoints(1)),
+                                                            getListOfVisitsPerMonthsPoints(1, "2019-05-01")),
                         UsageReportMatcher.matchUsageReport(bitstreamVisited.getID() + "_" +
                                                                 TOP_CITIES_REPORT_ID, TOP_CITIES_REPORT_ID,
                                                             Arrays.asList(expectedPointCity)),
@@ -2065,7 +2203,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest totalVisitRelationProjects = new UsageReportPointDsoTotalVisitsRest();
         totalVisitRelationProjects.addValue("views", 0);
         totalVisitRelationProjects.setType("item");
-        totalVisitRelation.setLabel("Views");
+        totalVisitRelationProjects.setLabel("Views");
         totalVisitRelationProjects.setId(person.getID().toString());
 
         //create expected report points for city visits
@@ -2104,15 +2242,15 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                         UsageReportMatcher.matchUsageReport(person.getID() + "_" +
                                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
                                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                    this.getListOfVisitsPerMonthsPoints(1)),
+                                    getLastMonthVisitPoints(1)),
                         UsageReportMatcher.matchUsageReport(person.getID() + "_" +
                                     TOTAL_VISITS_PER_MONTH_REPORT_ID_RELATION_PERSON_RESEARCHOUTPUTS,
                                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                    this.getListOfVisitsPerMonthsPoints(3)),
+                                    getLastMonthVisitPoints(3)),
                         UsageReportMatcher.matchUsageReport(person.getID() + "_" +
                                     TOTAL_VISITS_PER_MONTH_REPORT_ID_RELATION_PERSON_PROJECTS,
                                     TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                    this.getListOfVisitsPerMonthsPoints(0)),
+                                    getLastMonthVisitPoints(0)),
                         UsageReportMatcher.matchUsageReport(person.getID() + "_" +
                                     TOP_CITIES_REPORT_ID, TOP_CITIES_REPORT_ID,
                                     Arrays.asList(expectedPointCity)),
@@ -2217,42 +2355,31 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         totalVisitRelation.setType("item");
         totalVisitRelation.setLabel("Views");
         totalVisitRelation.setId(orgUnit.getID().toString());
+
         //create expected report points for city visits with relation
-        UsageReportPointCityRest expectedPointCityWithRelation = new UsageReportPointCityRest();
-        expectedPointCityWithRelation.addValue("views", 3);
-        expectedPointCityWithRelation.setId("New York");
+        UsageReportPointCityRest expectedPointCityWithRelation = getExpectedCityViews("New York", 3);
+
         //create expected report points for country visits with relation
-        UsageReportPointCountryRest expectedPointCountryWithRelation = new UsageReportPointCountryRest();
-        expectedPointCountryWithRelation.addValue("views", 3);
-        expectedPointCountryWithRelation.setIdAndLabel(Locale.US.getCountry(),
-                Locale.US.getDisplayCountry(context.getCurrentLocale()));
+        UsageReportPointCountryRest expectedPointCountryWithRelation = getExpectedCountryViews(Locale.US.getCountry(),
+                Locale.US.getDisplayCountry(context.getCurrentLocale()), 3);
+
         //top items expected report points
         List<UsageReportPointRest> points = new ArrayList<>();
         //first publication
-        UsageReportPointDsoTotalVisitsRest expectedPoint1 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint1.addValue("views", 2);
-        expectedPoint1.setType("item");
-        expectedPoint1.setId(publicationVisited2.getID().toString());
+        UsageReportPointDsoTotalVisitsRest expectedPoint1 = getExpectedDsoViews(publicationVisited2, 2);
         points.add(expectedPoint1);
         //second publication
-        UsageReportPointDsoTotalVisitsRest expectedPoint2 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPoint2.addValue("views", 1);
-        expectedPoint2.setType("item");
-        expectedPoint2.setId(publicationVisited1.getID().toString());
+        UsageReportPointDsoTotalVisitsRest expectedPoint2 = getExpectedDsoViews(publicationVisited1, 1);
         points.add(expectedPoint2);
 
         //total downloads expected points
         List<UsageReportPointRest> totalDownloadsPoints = new ArrayList<>();
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit1 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisitsBit1.addValue("views", 1);
-        expectedPointTotalVisitsBit1.setLabel("bitstream2");
-        expectedPointTotalVisitsBit1.setId(bitstreampublication_first.getID().toString());
-        expectedPointTotalVisitsBit1.setType("bitstream");
-        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit2 = new UsageReportPointDsoTotalVisitsRest();
-        expectedPointTotalVisitsBit2.addValue("views", 1);
-        expectedPointTotalVisitsBit2.setLabel("bitstream1");
-        expectedPointTotalVisitsBit2.setId(bitstreampublication_second.getID().toString());
-        expectedPointTotalVisitsBit2.setType("bitstream");
+        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit1 = getExpectedDsoViews(
+                bitstreampublication_first, 1);
+
+        UsageReportPointDsoTotalVisitsRest expectedPointTotalVisitsBit2 = getExpectedDsoViews(
+                bitstreampublication_second, 1);
+
         totalDownloadsPoints.add(expectedPointTotalVisitsBit1);
         totalDownloadsPoints.add(expectedPointTotalVisitsBit2);
 
@@ -2262,10 +2389,12 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
         UsageReportPointDsoTotalVisitsRest views = new UsageReportPointDsoTotalVisitsRest();
         views.addValue("views", 3);
         views.setType("item");
+        views.setLabel("Item visits");
         //downloads
         UsageReportPointDsoTotalVisitsRest downloads = new UsageReportPointDsoTotalVisitsRest();
         downloads.addValue("views", 2);
         downloads.setType("bitstream");
+        downloads.setLabel("File visits");
         totalDownloadsAndViewsPoints.add(views);
         totalDownloadsAndViewsPoints.add(downloads);
 
@@ -2284,7 +2413,7 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                         UsageReportMatcher.matchUsageReport(orgUnit.getID() + "_" +
                                         TOTAL_VISITS_PER_MONTH_REPORT_ID_RELATION_ORGUNIT_RP_RESEARCHOUTPUTS,
                                         TOTAL_VISITS_PER_MONTH_REPORT_ID,
-                                        this.getListOfVisitsPerMonthsPoints(3)),
+                                        getLastMonthVisitPoints(3)),
                         UsageReportMatcher.matchUsageReport(orgUnit.getID() + "_" +
                                         TOP_CITIES_REPORT_ID_RELATION_ORGUNIT_RP_RESEARCHOUTPUTS,
                                         TOP_CITIES_REPORT_ID,
@@ -2304,5 +2433,70 @@ public class StatisticsRestRepositoryIT extends AbstractControllerIntegrationTes
                                         TOTAL_VISITS_TOTAL_DOWNLOADS,
                                         totalDownloadsAndViewsPoints)
                 )));
+    }
+
+    private List<UsageReportPointRest> getLastMonthVisitPoints(int viewsLastMonth) {
+        return getListOfVisitsPerMonthsPoints(viewsLastMonth, 0);
+    }
+
+    private List<UsageReportPointRest> getListOfVisitsPerMonthsPoints(int viewsLastMonth, String monthsBack) {
+        LocalDate startDate = toLocalDate(MultiFormatDateParser.parse(monthsBack)).with(ChronoField.DAY_OF_MONTH, 1L);
+        LocalDate endDate = LocalDate.now().with(ChronoField.DAY_OF_MONTH, 1L);
+        int nrOfMonthsBack = (int) ChronoUnit.MONTHS.between(startDate, endDate);
+        return getListOfVisitsPerMonthsPoints(viewsLastMonth, nrOfMonthsBack);
+    }
+
+    private LocalDate toLocalDate(Date date) {
+        return date.toInstant()
+            .atZone(ZoneId.systemDefault())
+            .toLocalDate();
+    }
+
+    private List<UsageReportPointRest> getListOfVisitsPerMonthsPoints(int viewsLastMonth, int nrOfMonthsBack) {
+        List<UsageReportPointRest> expectedPoints = new ArrayList<>();
+        Calendar cal = Calendar.getInstance(context.getCurrentLocale());
+        for (int i = 0; i <= nrOfMonthsBack; i++) {
+            UsageReportPointDateRest expectedPoint = new UsageReportPointDateRest();
+            if (i > 0) {
+                expectedPoint.addValue("views", 0);
+            } else {
+                expectedPoint.addValue("views", viewsLastMonth);
+            }
+            String month = cal.getDisplayName(Calendar.MONTH, Calendar.LONG, context.getCurrentLocale());
+            expectedPoint.setId(month + " " + cal.get(Calendar.YEAR));
+
+            expectedPoints.add(expectedPoint);
+            cal.add(Calendar.MONTH, -1);
+        }
+        return expectedPoints;
+    }
+
+    private UsageReportPointDsoTotalVisitsRest getExpectedDsoViews(DSpaceObject dso, int views) {
+        UsageReportPointDsoTotalVisitsRest point = new UsageReportPointDsoTotalVisitsRest();
+
+        point.addValue("views", views);
+        point.setType(StringUtils.lowerCase(Constants.typeText[dso.getType()]));
+        point.setId(dso.getID().toString());
+        point.setLabel(dso.getName());
+
+        return point;
+    }
+
+    private UsageReportPointCountryRest getExpectedCountryViews(String id, String label, int views) {
+        UsageReportPointCountryRest point = new UsageReportPointCountryRest();
+
+        point.addValue("views", views);
+        point.setIdAndLabel(id, label);
+
+        return point;
+    }
+
+    private UsageReportPointCityRest getExpectedCityViews(String id, int views) {
+        UsageReportPointCityRest point = new UsageReportPointCityRest();
+
+        point.addValue("views", views);
+        point.setId(id);
+
+        return point;
     }
 }
